[project]
name = "road-profile-viewer"
version = "0.1.0"
description = "Interactive 2D road profile viewer with camera ray intersection using Dash and Plotly"
readme = "README.md"
authors = [
    { name = "L3GJ0N", email = "dome.muller@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dash>=2.14.0",
    "plotly>=5.18.0",
    "numpy>=1.26.0",
]

[project.scripts]
road-profile-viewer = "road_profile_viewer:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
